Convert models to ONNX models.

--- a/pascal_voc.ipynb
+++ b/pascal_voc.ipynb
@@ -19864,6 +19864,43 @@
    "source": [
     "!python eval_ssd.py --net mb1-ssd  --dataset data/test/VOC2007/ --trained_model models/mobilenet-v1-ssd-mp-0_675.pth --label_file models/voc-model-labels.txt "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Save the model in binary format to the files models/mb1-ssd_init_net.pb and models/mb1-ssd_predict_net.pb.\n",
+      "Inference result: [array([[[9.7765732e-01, 7.0106488e-04, 7.2115118e-04, ...,\n",
+      "         4.4412294e-04, 3.1182624e-04, 7.5781037e-04],\n",
+      "        [9.7739851e-01, 5.1408703e-04, 8.1554335e-04, ...,\n",
+      "         7.9465722e-04, 4.3586225e-04, 9.8866178e-04],\n",
+      "        [9.7610062e-01, 7.2548597e-04, 6.9327897e-04, ...,\n",
+      "         3.1375236e-04, 2.9182193e-04, 6.8447576e-04],\n",
+      "        ...,\n",
+      "        [1.6229749e-01, 6.4799888e-04, 6.1771243e-05, ...,\n",
+      "         3.8485190e-01, 3.0472173e-04, 1.1473169e-02],\n",
+      "        [1.7723776e-01, 7.1578269e-04, 9.0996524e-05, ...,\n",
+      "         3.4252781e-01, 4.6854155e-04, 1.1969560e-02],\n",
+      "        [2.0899685e-01, 7.0322410e-04, 6.3171850e-05, ...,\n",
+      "         3.2805136e-01, 2.6844812e-04, 9.1714170e-03]]], dtype=float32), array([[[ 4.1358173e-04,  1.6063564e-03,  8.3436199e-02,  8.4603280e-02],\n",
+      "        [-9.0480387e-02, -7.8219891e-02,  1.2810324e-01,  1.4632697e-01],\n",
+      "        [ 2.5747310e-02, -5.6291930e-04,  9.9868014e-02,  6.1185680e-02],\n",
+      "        ...,\n",
+      "        [-4.7605038e-03,  1.9516408e-02,  1.0069704e+00,  1.0025690e+00],\n",
+      "        [-7.9074502e-04,  2.0549238e-02,  9.9952185e-01,  9.9660116e-01],\n",
+      "        [-8.2553625e-03,  5.5950284e-03,  1.0120964e+00,  1.0157821e+00]]],\n",
+      "      dtype=float32)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python convert_to_onnx_models.py mb1-ssd models/mobilenet-v1-ssd-mp-0_675.pth models/voc-model-labels.txt "
+   ]
   }
  ],
  "metadata": {
