--- a/pascal_voc.ipynb
+++ b/pascal_voc.ipynb
@@ -19901,6 +19901,73 @@
    "source": [
     "!python convert_to_onnx_models.py mb1-ssd models/mobilenet-v1-ssd-mp-0_675.pth models/voc-model-labels.txt "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-11-04 00:57:33,486 - root - Read annotation file data/open_images/train-annotations-bbox.csv\n",
+      "2024-11-04 00:57:43,616 - root - train bounding boxes size: 1307\n",
+      "2024-11-04 00:57:43,616 - root - Approximate Image Stats: \n",
+      "2024-11-04 00:57:43,617 - root - Handgun: 561/990 = 0.57.\n",
+      "2024-11-04 00:57:43,617 - root - Shotgun: 429/990 = 0.43.\n",
+      "2024-11-04 00:57:43,617 - root - Label distribution: \n",
+      "2024-11-04 00:57:43,617 - root - Handgun: 727/1307 = 0.56.\n",
+      "2024-11-04 00:57:43,617 - root - Shotgun: 580/1307 = 0.44.\n",
+      "2024-11-04 00:57:43,618 - root - Shuffle dataset.\n",
+      "2024-11-04 00:57:43,618 - root - Save train data to data/open_images/sub-train-annotations-bbox.csv.\n",
+      "2024-11-04 00:57:43,642 - root - Download https://storage.googleapis.com/openimages/2018_04/validation/validation-annotations-bbox.csv.\n",
+      "2024-11-04 00:57:45,426 - root - Read annotation file data/open_images/validation-annotations-bbox.csv\n",
+      "2024-11-04 00:57:45,601 - root - validation bounding boxes size: 50\n",
+      "2024-11-04 00:57:45,601 - root - Approximate Image Stats: \n",
+      "2024-11-04 00:57:45,602 - root - Handgun: 20/39 = 0.51.\n",
+      "2024-11-04 00:57:45,602 - root - Shotgun: 19/39 = 0.49.\n",
+      "2024-11-04 00:57:45,602 - root - Label distribution: \n",
+      "2024-11-04 00:57:45,603 - root - Shotgun: 26/50 = 0.52.\n",
+      "2024-11-04 00:57:45,603 - root - Handgun: 24/50 = 0.48.\n",
+      "2024-11-04 00:57:45,603 - root - Shuffle dataset.\n",
+      "2024-11-04 00:57:45,603 - root - Save validation data to data/open_images/sub-validation-annotations-bbox.csv.\n",
+      "2024-11-04 00:57:45,604 - root - Download https://storage.googleapis.com/openimages/2018_04/test/test-annotations-bbox.csv.\n",
+      "2024-11-04 00:57:50,582 - root - Read annotation file data/open_images/test-annotations-bbox.csv\n",
+      "2024-11-04 00:57:51,037 - root - test bounding boxes size: 147\n",
+      "2024-11-04 00:57:51,037 - root - Approximate Image Stats: \n",
+      "2024-11-04 00:57:51,038 - root - Handgun: 72/130 = 0.55.\n",
+      "2024-11-04 00:57:51,038 - root - Shotgun: 58/130 = 0.45.\n",
+      "2024-11-04 00:57:51,038 - root - Label distribution: \n",
+      "2024-11-04 00:57:51,038 - root - Handgun: 81/147 = 0.55.\n",
+      "2024-11-04 00:57:51,038 - root - Shotgun: 66/147 = 0.45.\n",
+      "2024-11-04 00:57:51,038 - root - Shuffle dataset.\n",
+      "2024-11-04 00:57:51,038 - root - Save test data to data/open_images/sub-test-annotations-bbox.csv.\n",
+      "2024-11-04 00:57:51,040 - root - Start downloading 1121 images.\n",
+      "2024-11-04 00:58:31,334 - root - Task Done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Downloaded 100 images.\n",
+      "WARNING:root:Downloaded 200 images.\n",
+      "WARNING:root:Downloaded 300 images.\n",
+      "WARNING:root:Downloaded 400 images.\n",
+      "WARNING:root:Downloaded 500 images.\n",
+      "WARNING:root:Downloaded 600 images.\n",
+      "WARNING:root:Downloaded 700 images.\n",
+      "WARNING:root:Downloaded 800 images.\n",
+      "WARNING:root:Downloaded 900 images.\n",
+      "WARNING:root:Downloaded 1000 images.\n",
+      "WARNING:root:Downloaded 1100 images.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python open_images_downloader.py --root data/open_images --class_names \"Handgun,Shotgun\" --num_workers 20"
+   ]
   }
  ],
  "metadata": {
