--- a/pascal_voc.ipynb
+++ b/pascal_voc.ipynb
@@ -19968,6 +19968,15 @@
    "source": [
     "!python open_images_downloader.py --root data/open_images --class_names \"Handgun,Shotgun\" --num_workers 20"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python train_ssd.py --dataset_type open_images --datasets data/open_images --net mb1-ssd --pretrained_ssd models/mobilenet-v1-ssd-mp-0_675.pth --scheduler cosine --lr 0.01 --t_max 100 --validation_epochs 5 --num_epochs 100 --base_net_lr 0.001  --batch_size 5"
+   ]
   }
  ],
  "metadata": {
